--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "xeus-sql" %}
-{% set version = "0.0.6" %}
+{% set version = "0.0.7" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/jupyter-xeus/xeus-sql/archive/{{ version }}.tar.gz
-  sha256: c125b525ce867e46a96562da423012204bbf43a32886b279aece067a1e30c6c9
+  sha256: 5f37f2fcd171c0209faf97ea8f82afc813f162407f3c38ef78688bb3e76ed42b 
 
 build:
   number: 0
@@ -22,11 +22,11 @@ requirements:
     - cppzmq
     - nlohmann_json
     - soci-core
-    - xeus >=0.23.2,<0.26
-    - xproperty
+    - xeus >=1.0.0,<2.0.0
+    - xproperty >=0.11.0,<0.12.0
     - xtl
-    - xvega >=0.0.7
-    - xvega-bindings >=0.0.7
+    - xvega >=0.0.10
+    - xvega-bindings >=0.0.10
     - zeromq
   run:
     # xvega and xvega-bindings are missing run exports
