--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,8 @@ requirements:
     - cmake
     - make  # [unix]
   host:
-    - cpp-tabulate >=1.3,<2
+    # cpp-tabulate 1.5 is backward incompatible ...
+    - cpp-tabulate >=1.3,<1.5
     - cppzmq
     - nlohmann_json <3.10
     - soci-core
