--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,12 @@ requirements:
     - make  # [unix]
   host:
     # cpp-tabulate 1.5 is backward incompatible ...
-    - cpp-tabulate >=1.3,<1.5
+    - cpp-tabulate >=1.3
     - cppzmq
-    - nlohmann_json <3.10
+    - nlohmann_json
     - soci-core
-    - xeus-zmq >=1.0.1,<2
-    - xproperty >=0.11.0,<0.12.0
+    - xeus-zmq >=1.0.1
+    - xproperty >=0.11.0
     - xtl
     - xvega >=0.0.10
     - xvega-bindings >=0.0.10
