--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,9 @@ requirements:
     # cpp-tabulate 1.5 is backward incompatible ...
     - cpp-tabulate >=1.3,<1.5
     - cppzmq
-    - nlohmann_json <4
+    - nlohmann_json
     - soci-core
-    - xeus-zmq >=1.0.1,<2
+    - xeus-zmq >=1.0.2,<2
     - xproperty >=0.11.0,<0.12.0
     - xtl
     - xvega >=0.0.10
